<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_orders"
        android:orderInCategory="10"
        android:title="@string/action_orders"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        android:icon="@drawable/ic_status_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favourites"
        android:orderInCategory="30"
        android:title="@string/action_favourites"
        android:icon="@drawable/ic_favourite_cart"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>